package theory.structural.decorator.withDecorator;

public interface Beverage {

    public int cost();
}
