package theory.structural.decorator.withDecorator;

public class Cappucino implements Beverage {

    @Override
    public int cost() {
        return 5;
    }
}
