package theory.structural.decorator.withDecorator;

public class Expresso implements Beverage {
    @Override
    public int cost() {
        return 10;
    }
}
