@startuml

title __WITHDECORATOR's Class Diagram__\n

  namespace theory.structural.decorator.withDecorator {
    interface theory.structural.decorator.withDecorator.Beverage {
        {abstract} + cost()
    }
  }
  

  namespace theory.structural.decorator.withDecorator {
    class theory.structural.decorator.withDecorator.Cappucino {
        + cost()
    }
  }
  

  namespace theory.structural.decorator.withDecorator {
    class theory.structural.decorator.withDecorator.ChocolateAddon {
        + ChocolateAddon()
        + cost()
    }
  }
  

  namespace theory.structural.decorator.withDecorator {
    class theory.structural.decorator.withDecorator.Expresso {
        + cost()
    }
  }
  

  namespace theory.structural.decorator.withDecorator {
    class theory.structural.decorator.withDecorator.Main {
        {static} + main()
    }
  }
  

  namespace theory.structural.decorator.withDecorator {
    class theory.structural.decorator.withDecorator.SoyMilkAddon {
        + SoyMilkAddon()
        + cost()
    }
  }
  

  theory.structural.decorator.withDecorator.Cappucino .up.|> theory.structural.decorator.withDecorator.Beverage
  theory.structural.decorator.withDecorator.ChocolateAddon .up.|> theory.structural.decorator.withDecorator.Beverage
  theory.structural.decorator.withDecorator.ChocolateAddon o-- theory.structural.decorator.withDecorator.Beverage : beverage
  theory.structural.decorator.withDecorator.Expresso .up.|> theory.structural.decorator.withDecorator.Beverage
  theory.structural.decorator.withDecorator.SoyMilkAddon .up.|> theory.structural.decorator.withDecorator.Beverage
  theory.structural.decorator.withDecorator.SoyMilkAddon o-- theory.structural.decorator.withDecorator.Beverage : beverage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
